# django-clite

./: .gitignore  .versionrc.json  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Pipfile  README.md  app.py  bitbucket-pipelines.yml  cli.py  generator.py  generator.sh  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-tests.yml  pythonpublish.yml
.husky/: commit-msg  pre-commit
Templated/: replaceable.txt  requirements.txt  settings.txt  urls.txt
Templated/_appfiles_/: admin.py  auth.py  forms.py  models.py  serializers.py  urls.py  views.py
Templated/_html_/: index.html
Templated/_libraries_/: _libraries_admin.py  _libraries_choices.py  _libraries_models.py  _libraries_views.py
blueprints/apps/: admin.txt  form.txt  model.txt  serializers.txt  urls.txt  view.txt  viewset.txt
blueprints/templates/: page.html
cli/: __init__.py  app.py  constants.py  logger.py  utils.py
cli/click/: __init__.py  aliased.py  combined.py  discoverable.py
cli/commands/: __init__.py
cli/core/: __init__.py  filesystem.py  git.py  logger.py
cli/decorators/: __init__.py  cache.py  count_calls.py  lazy.py  logger.py  register.py  scope.py  set.py  singleton.py  template.py  timed.py
cli/handlers/: __init__.py  generic_handler.py
cli/helpers/: __init__.py  errors.py  field_parser.py  fs.py  logger.py  paths.py  templates.py
cli/template_files/: fixture.tpl  project.yaml  serializer.tpl
cli/utils/: __init__.py  field_parser.py  finders.py  logger.py  paths.py  sanitize.py
commands/: configurator.py  generator.py  gitter.py  installer.py  new.py
commands/helpers/: echoer.py  generator.py  new.py  templater.py
config/: config.json
djangle/: __init__.py
djangle/cli/: __init__.py
django_clite/: __init__.py  constants.py
django_clite/cli/: __init__.py  cli.py
django_clite/commands/: __init__.py  callbacks.py
django_clite/core/: logger.py
django_clite/decorators/: json_field.py  lazy.py  scope.py  template_watcher.py
django_clite/extensions/: discoverable.py
django_clite/helpers/: __init__.py  field_parser.py  fields.py  finders.py  fs.py  logger.py  parser.py
django_clite/template_files/: fixture.tpl  form.tpl
djangocli/: config.json
djangocli/cli/: __init__.py
djangocli/commands/: configurator.py  destroyer.py  generator.py  migrator.py  new.py
docs/: conf.py  index.rst
docs/cli/: readme.ipynb
dummy/: dummy.sqlite3  manage.py
dummy/dummy/: auth.py  config.py  settings.py  urls.py  wsgi.py
src/: __init__.py
src/cli/: __init__.py  app.py  constants.py  utils.py
src/django_clite/: __init__.py  cli.py  constants.py
tests/: __init__.py  conftest.py  generate_form_test.py  test_utils.py
tests/commands/: __init__.py
tests/core/: __init__.py
(+766 files in other folders)
