[project]
name = "django-clite"
description = "CLI for creating and managing Django projects"
authors = [{ name = "Leo Neto", email = "leo@ekletik.com" }]
maintainers = [{ name = "Leo Neto", email = "leo@ekletik.com" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
version = "0.19.2"
keywords = [
  "django",
  "automate",
  "cli",
  "command line tools",
  "rails",
  "ember",
  "web",
  "framework",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Click>=8.1",
  "django>=4.2",
  "jinja2>=3.1",
  "inquirer>=3.1.3",
  "inflection>=0.5.1",
  "rich>=13.3",
  "geny==0.1.3",
]

[project.urls]
Homepage = "https://github.com/oleoneto/django-clite"
Issues = "https://github.com/oleoneto/django-clite/issues"

[project.scripts]
django-clite = "django_clite.cli.cli:cli"

[tool.setuptools]
packages = ["django_clite"]
