[metadata]
name = djangle-cli
description = A CLI tool for managing Django applications
license_file = LICENSE.txt
long-description = file: README.rst
platforms = any

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    djangle
    tests

[coverage:paths]
source =
    djangle
