[metadata]
name = django-clite
description = A CLI tool for managing Django applications
license_file = LICENSE.txt
long-description = file: README.md
platforms = any

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    django_clite
    tests

[coverage:paths]
source =
    django_clite
