[metadata]
name = django-clite
description = A CLI to handle the creation and management of your Django projects.
license_file = LICENSE.txt
long-description = file: README.md
platforms = any

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    cli
    tests

[coverage:paths]
source =
    cli
